--- a/eatcoProj/frontend/src/app/components/sidebar/Sidebar.css
+++ b/eatcoProj/frontend/src/app/components/sidebar/Sidebar.css
@@ -6,6 +6,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: white;
+}
+
+.Sidebar div {
+    padding: 5%;
+    padding-left: 10%;
 }
 .sidebar-heading {
     display: flex;
@@ -19,9 +25,14 @@
 .Sidebar a {
     width: 100%;
     text-align: left;
+    margin: 5% 0;
 }
 
 .nav-links, .auth-links {
     display: flex;
     flex-wrap: wrap;
+}
+
+.hide-element {
+    visibility: hidden;
 }
