--- a/eatcoProj/frontend/src/app/components/sidebar/Sidebar.css
+++ b/eatcoProj/frontend/src/app/components/sidebar/Sidebar.css
@@ -20,12 +20,14 @@
 
 .sidebar-heading img {
     width: 2vw;
+    cursor: pointer;
 }
 
 .Sidebar a {
     width: 100%;
     text-align: left;
     margin: 5% 0;
+    font-size: 2.5vh;
 }
 
 .nav-links, .auth-links {
