added spotify player embed

--- a/eatcoProj/frontend/src/app/components/recipe/Recipe.css
+++ b/eatcoProj/frontend/src/app/components/recipe/Recipe.css
@@ -28,9 +28,10 @@ hr {
     width: 50vw;
 }
 
-.recipe-steps {
+.recipe-steps-playlist {
     padding: 2vw;
     text-align: left;
+    align-items: flex-start;
 }
 
 .recipe-header {
