--- a/eatcoProj/frontend/spotify.css
+++ b/eatcoProj/frontend/spotify.css
@@ -60,3 +60,42 @@
     flex-wrap: wrap;
     width: 100%;
 }
+
+:root {
+    --secondary-color: #ffffff;
+  }
+  
+  .container {
+    display: flex;
+    color: #fff;
+    animation: expand .8s ease forwards;
+    background-color: var(--secondary-color);
+    transition: all .8s ease;
+  }
+  
+  @keyframes slideIn {
+    0% {
+      transform: translateX(500px) scale(.2);
+    }
+    100% {
+      transform: translateX(0px) scale(1);
+    }
+  }
+  
+  @keyframes slideUp {
+    0% {
+      transform: translateY(300px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  
+  @keyframes expand {
+    0% {
+      transform: translateX(1400px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
